# asteroid-miner

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  fontconfig.fonts.dtd  sprites.tps  vcpkg-configuration.json  vcpkg.json
data/: fontconfig.xml
data/sprites/: sprites.json
overlays/: win32-release.cmake  win64-release.cmake
source/: CMakeLists.txt  WinApp.rc  constants.h  error.h  event.cpp  event.h  eventHandler.h  flatScene.cpp  flatScene.h  game.cpp  game.h  global.cpp  global.h  globalIncludes.h  lineRenderer.cpp  lineRenderer.h  main.cpp  point.cpp  point.h  random.cpp  random.h  shaderProgram.cpp  shaderProgram.h  shaderProgramContext.h  sprite.cpp  sprite.h  spriteBuffer.cpp  spriteBuffer.h  spriteFactory.cpp  spriteFactory.h  spriteGeometry.cpp  spriteGeometry.h  spritePhysicsEngine.cpp  spritePhysicsEngine.h  spriteRenderer.cpp  spriteRenderer.h  spriteResource.cpp  spriteResource.h  spriteSheet.cpp  spriteSheet.h  (+10 more)
source/demo/: drone.cpp  drone.h  game.cpp  game.h
source/game/: asteroid.cpp  asteroid.h  asteroidSpawner.cpp  asteroidSpawner.h  collisionTester.cpp  collisionTester.h  constants.h  drone.cpp  drone.h  droneFactory.cpp  droneFactory.h  game.cpp  game.h  outerSpaceScene.cpp  outerSpaceScene.h  outerSpaceUi.cpp  outerSpaceUi.h
source/ui/: panel.cpp  panel.h  textBox.cpp  textBox.h
source/util/: multiRange.h  pointerSpan.h  range.h  string.h
vcpkg-ports/msdf-atlas-gen/: portfile.cmake  vcpkg.json
